--- a/po/sq.po
+++ b/po/sq.po
@@ -1,4 +1,4 @@
-# Përkthimi i mesazheve të nautilus në shqip.
+# Përkthimi i nautilus në shqip.
 # Copyright (C) 2002-2008 Free Software Foundation, Inc.
 # This file is distributed under the same license as nautilus package
 #
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-18 16:34+0000\n"
-"PO-Revision-Date: 2008-09-20 17:52+0200\n"
+"POT-Creation-Date: 2008-09-25 15:21+0000\n"
+"PO-Revision-Date: 2008-09-27 12:13+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
-"Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
+"Language-Team: albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -332,14 +332,14 @@ msgstr ""
 "zëvendësohen me eklipse, në varësi të nivelit të zmadhimit. Çdo zë në listë "
 "është në formën \"Niveli i zmadhimit:I plotë\". Për çdo nivel zmadhimi të "
 "specifikuar, nëse numri i plotë i dhënë është më i madh se 0, emri i file "
-"nuk do të kapërcejë numrin e rreshtave të dhënë. Nëse i plotë është 0 ose "
-"më i vogël se 0, nuk përcaktohet asnjë kufi mbi nivelin e specifikuar të "
+"nuk do të kapërcejë numrin e rreshtave të dhënë. Nëse i plotë është 0 ose më "
+"i vogël se 0, nuk përcaktohet asnjë kufi mbi nivelin e specifikuar të "
 "zmadhimit. Lejohet gjithashtu një zë i paracaktuar i formës \"I plotë\" pa "
-"specifikuar asnjë nivel zmadhimi që përcakton numrin maksimum të "
-"rreshtave për të gjithë nivelet e tjerë të zmadhimit. Shembuj: \"0\" - shfaq "
-"gjithmonë emrat e file tepër të gjatë; \"3\" - shkurton emrat e file nëse "
-"këta tejkalojnë tre rreshta; \"smallest:5,smaller:4,0\" - shkurton emrat e "
-"file nëse këta tejkalojnë pesë rreshta për nivelin e zmadhimit smallest, i "
+"specifikuar asnjë nivel zmadhimi që përcakton numrin maksimum të rreshtave "
+"për të gjithë nivelet e tjerë të zmadhimit. Shembuj: \"0\" - shfaq gjithmonë "
+"emrat e file tepër të gjatë; \"3\" - shkurton emrat e file nëse këta "
+"tejkalojnë tre rreshta; \"smallest:5,smaller:4,0\" - shkurton emrat e file "
+"nëse këta tejkalojnë pesë rreshta për nivelin e zmadhimit smallest, i "
 "shkurton nëse tejkalojnë katër rreshta për nivelin e zmadhimit smaller dhe "
 "nuk i shkurton për nivelet e tjerë të zmadhimit. Nivelet e zmadhimit në "
 "dispozicion janë: smallest (33%), smaller (50%), small (66%), standard "
@@ -361,10 +361,10 @@ msgid ""
 "limit is imposed on the number of displayed lines."
 msgstr ""
 "Një i plotë që specifikon sa pjesë e emrit të file tepër të gjatë duhet të "
-"zëvendësohen me eklipse në hapësirën e punës. Nëse numri i plotë i "
-"dhënë është më i madh se 0, emri i file nuk do të tejkalojë numrin e "
-"rreshtave të caktuar. Nëse i ploti është 0 ose më i vogël se 0, nuk "
-"caktohet asnjë kufizim mbi numrin e rreshtave të shfaqur."
+"zëvendësohen me eklipse në hapësirën e punës. Nëse numri i plotë i dhënë "
+"është më i madh se 0, emri i file nuk do të tejkalojë numrin e rreshtave të "
+"caktuar. Nëse i ploti është 0 ose më i vogël se 0, nuk caktohet asnjë "
+"kufizim mbi numrin e rreshtave të shfaqur."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:9
 msgid "Color for the default folder background. Only used if background_set is true."
@@ -687,7 +687,7 @@ msgid ""
 "If set to true, then hidden files are shown in the file manager. Hidden "
 "files are either dotfiles or are listed in the folder's .hidden file."
 msgstr ""
-"Nëse e vërtetë, files e padukshëm do të jenë të dukshëm në menazhuesin e "
+"Nëse e vërtetë, files e padukshëm do të jenë të dukshëm në administruesin e "
 "file. File e padukshëm janë file me një pikë përpara ose që gjenden tek "
 "kartela e file të .padukshëm."
 
@@ -3145,11 +3145,11 @@ msgstr ""
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
 msgid "Change the behaviour and appearance of file manager windows"
-msgstr "Ndryshon sjelljen dhe paraqitjen e dritareve të menazhuesit të file"
+msgstr "Ndryshon sjelljen dhe paraqitjen e dritareve të administruesit të file"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
-msgstr "Menazhimi i file"
+msgstr "Administrimi i file"
 
 #: ../nautilus-home.desktop.in.in.h:1 ../src/file-manager/fm-tree-view.c:1341
 msgid "Home Folder"
@@ -3162,7 +3162,7 @@ msgstr "Hap kartelën personale"
 
 #: ../nautilus.desktop.in.in.h:1
 msgid "Browse the file system with the file manager"
-msgstr "Shfleton file e sistemit me menazhuesin e file"
+msgstr "Shfleton file e sistemit me administruesin e file"
 
 #: ../nautilus.desktop.in.in.h:2
 msgid "File Browser"
@@ -3989,7 +3989,7 @@ msgstr "Shfaq ose ndryshon pronësitë e kësaj kartele"
 #: ../src/file-manager/fm-directory-view.c:6892
 #, c-format
 msgid "Run or manage scripts from %s"
-msgstr "Zbaton ose menazhon script-et në %s"
+msgstr "Zbaton ose administron script-et në %s"
 
 #. Create a script action here specially because its tooltip is dynamic
 #: ../src/file-manager/fm-directory-view.c:6894
@@ -4511,8 +4511,8 @@ msgstr "Shfaq këtë pozicion me anë të paraqitjes në formë liste."
 #: ../src/file-manager/fm-properties-window.c:511
 msgid "You cannot assign more than one custom icon at a time!"
 msgstr ""
-"Nuk mund të caktohet më shumë se një ikonë të personalizuar në "
-"të njëjtën kohë!"
+"Nuk mund të caktohet më shumë se një ikonë të personalizuar në të njëjtën "
+"kohë!"
 
 #: ../src/file-manager/fm-properties-window.c:512
 #: ../src/nautilus-information-panel.c:495
@@ -4855,12 +4855,12 @@ msgstr "Degëzimi"
 msgid "Show Tree"
 msgstr "Shfaq degëzimin"
 
-#: ../src/nautilus-application.c:323
+#: ../src/nautilus-application.c:325
 #, c-format
 msgid "Nautilus could not create the required folder \"%s\"."
 msgstr "Nautilus nuk mund të krijojë kartelën e duhur «%s»."
 
-#: ../src/nautilus-application.c:325
+#: ../src/nautilus-application.c:327
 msgid ""
 "Before running Nautilus, please create the following folder, or set "
 "permissions such that Nautilus can create it."
@@ -4868,18 +4868,18 @@ msgstr ""
 "Përpara se të ekzekutohet Nautilus, krijoni kartelën në vazhdim, ose "
 "përcaktoni të drejtat në menyrë që ta krijojë Nautilus."
 
-#: ../src/nautilus-application.c:328
+#: ../src/nautilus-application.c:330
 #, c-format
 msgid "Nautilus could not create the following required folders: %s."
 msgstr "Nautilus nuk mund të krijojë kartelat e duhura në vijim: %s."
 
-#: ../src/nautilus-application.c:330
+#: ../src/nautilus-application.c:332
 msgid ""
 "Before running Nautilus, please create these folders, or set permissions "
 "such that Nautilus can create them."
 msgstr ""
-"Përpara se të ekzekutohet Nautilus, krijoni këto kartela, ose "
-"përcaktoni të drejtat në menyrë që t'i krijojë Nautilus."
+"Përpara se të ekzekutohet Nautilus, krijoni këto kartela, ose përcaktoni të "
+"drejtat në menyrë që t'i krijojë Nautilus."
 
 #. Can't register myself due to trouble locating the
 #. * Nautilus_Shell.server file. This has happened when you
@@ -4891,18 +4891,18 @@ msgstr ""
 #. * this problem but we don't exactly understand why,
 #. * since neither of the above causes explain it.
 #.
-#: ../src/nautilus-application.c:597
+#: ../src/nautilus-application.c:599
 msgid ""
 "Nautilus cannot be used now. Running the command \"bonobo-slay\" from the "
 "console may fix the problem. If not, you can try rebooting the computer or "
 "installing Nautilus again."
 msgstr ""
-"Nuk është i mundur përdorimi i Nautilus tani. Për të zgjidhur problemin, mund "
-"të ndihmojë ekzekutimi i komandës «bonobo-slay» nga konsola. Në rast të "
+"Nuk është i mundur përdorimi i Nautilus tani. Për të zgjidhur problemin, "
+"mund të ndihmojë ekzekutimi i komandës «bonobo-slay» nga konsola. Në rast të "
 "kundërt, provo të rinisni kompjuterin apo instaloni përsëri Nautilus."
 
 #. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
-#: ../src/nautilus-application.c:603
+#: ../src/nautilus-application.c:605
 msgid ""
 "Nautilus cannot be used now. Running the command \"bonobo-slay\" from the "
 "console may fix the problem. If not, you can try rebooting the computer or "
@@ -4922,15 +4922,15 @@ msgid ""
 "We have also seen this error when a faulty version of bonobo-activation was "
 "installed."
 msgstr ""
-"Nuk është i mundur përdorimi i Nautilus tani. Për të zgjidhur problemin, mund "
-"të ndihmojë ekzekutimi i komandës «bonobo-slay» nga konsola. Në rast të "
+"Nuk është i mundur përdorimi i Nautilus tani. Për të zgjidhur problemin, "
+"mund të ndihmojë ekzekutimi i komandës «bonobo-slay» nga konsola. Në rast të "
 "kundërt, provo të rinisni kompjuterin apo instaloni përsëri Nautilus.\n"
 "\n"
 "Bonobo nuk arrin të gjejë file «Nautilus_shell.server». Një nga shkaqet e "
-"mundshëm mund të jetë mungesa e të ndryshueshmes së ambientit «LD_"
-"LIBRARY_PATH» e directory që përmban librerinë bonobo-activation. Një "
-"arsye tjetër mund të jetë një instalim jo korrekt me një «Nautilus_shell.server» "
-"mungues.\n"
+"mundshëm mund të jetë mungesa e të ndryshueshmes së ambientit "
+"«LD_LIBRARY_PATH» e directory që përmban librerinë bonobo-activation. Një "
+"arsye tjetër mund të jetë një instalim jo korrekt me një «Nautilus_shell."
+"server» mungues.\n"
 "\n"
 "Duke ekzekutuar «bonobo-slay» të gjithë proçeset bij të Bonobo Activation dhe "
 "GConf, që mund tu nevoiten aplikativëve të tjerë, do të përfundohen.\n"
@@ -4950,23 +4950,23 @@ msgstr ""
 #. * good message.
 #.
 #. FIXME bugzilla.gnome.org 42538: When can this happen?
-#: ../src/nautilus-application.c:633 ../src/nautilus-application.c:651
-#: ../src/nautilus-application.c:658
+#: ../src/nautilus-application.c:635 ../src/nautilus-application.c:653
+#: ../src/nautilus-application.c:660
 msgid "Nautilus cannot be used now, due to an unexpected error."
 msgstr ""
-"Nuk është i mundur përdorimi i Nautilus tani, për shkak të një "
-"gabimi të papritur."
+"Nuk është i mundur përdorimi i Nautilus tani, për shkak të një gabimi të "
+"papritur."
 
-#: ../src/nautilus-application.c:634
+#: ../src/nautilus-application.c:636
 msgid ""
 "Nautilus cannot be used now, due to an unexpected error from Bonobo when "
 "attempting to register the file manager view server."
 msgstr ""
-"Nuk është i mundur përdorimi i Nautilus tani, për shkak të një "
-"gabimi të papritur nga Bonobo gjatë përpjekjes për të regjistruar serverin "
-"për shfaqjen e file manager."
+"Nuk është i mundur përdorimi i Nautilus tani, për shkak të një gabimi të "
+"papritur nga Bonobo gjatë përpjekjes për të regjistruar serverin për "
+"shfaqjen e file manager."
 
-#: ../src/nautilus-application.c:652
+#: ../src/nautilus-application.c:654
 msgid ""
 "Nautilus cannot be used now, due to an unexpected error from Bonobo when "
 "attempting to locate the factory. Killing bonobo-activation-server and "
@@ -4974,10 +4974,10 @@ msgid ""
 msgstr ""
 "Nuk është i mundur përdorimi i Nautilus tani, për shkak të një gabimi të "
 "papritur gjatë përpjekjes për të gjetur fabrikën. Për të zgjidhur problemin "
-"mund të ndihmojë përfundimi i proçesit «bonobo-activation-server» "
-"dhe rinisja e Nautilus."
+"mund të ndihmojë përfundimi i proçesit «bonobo-activation-server» dhe rinisja "
+"e Nautilus."
 
-#: ../src/nautilus-application.c:659
+#: ../src/nautilus-application.c:661
 msgid ""
 "Nautilus cannot be used now, due to an unexpected error from Bonobo when "
 "attempting to locate the shell object. Killing bonobo-activation-server and "
@@ -4985,10 +4985,10 @@ msgid ""
 msgstr ""
 "Nuk është i mundur përdorimi i Nautilus tani, për shkak të një gabimi të "
 "papritur gjatë përpjekjes për të gjetur objektin shell. Për të zgjidhur "
-"problemin mund të ndihmojë përfundimi i proçesit «bonobo-activation-"
-"server» dhe rinisja e Nautilus."
+"problemin mund të ndihmojë përfundimi i proçesit «bonobo-activation-server» "
+"dhe rinisja e Nautilus."
 
-#: ../src/nautilus-application.c:1369 ../src/nautilus-places-sidebar.c:1682
+#: ../src/nautilus-application.c:1371 ../src/nautilus-places-sidebar.c:1682
 #: ../src/nautilus-places-sidebar.c:1705 ../src/nautilus-places-sidebar.c:1728
 #, c-format
 msgid "Unable to eject %s"
@@ -5412,20 +5412,20 @@ msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
 msgstr ""
-"Zgjidh rradhën e shfaqjes së informacione nën emrat e ikonave. Me rritjen "
-"e zmadhimit do të shfaqen më shumë informacione."
+"Zgjidh rradhën e shfaqjes së informacione nën emrat e ikonave. Me rritjen e "
+"zmadhimit do të shfaqen më shumë informacione."
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid "Choose the order of information to appear in the list view."
 msgstr ""
-"Zgjidh renditjen me të cilën informacionet do të shfaqjen në paraqitjen "
-"në formë liste."
+"Zgjidh renditjen me të cilën informacionet do të shfaqjen në paraqitjen në "
+"formë liste."
 
 #: ../src/nautilus-file-management-properties.glade.h:51
 msgid "Choose what happens when inserting media or connecting devices to the system"
 msgstr ""
-"Zgjidh veprimin për tu ndërmarrë kur futet një suport apo lidhen "
-"dispozitivë në sistem"
+"Zgjidh veprimin për tu ndërmarrë kur futet një suport apo lidhen dispozitivë "
+"në sistem"
 
 #: ../src/nautilus-file-management-properties.glade.h:52
 msgid "Count _number of items:"
@@ -5445,7 +5445,7 @@ msgstr "Shfaqja"
 
 #: ../src/nautilus-file-management-properties.glade.h:56
 msgid "File Management Preferences"
-msgstr "Preferimet e menazhimit të file"
+msgstr "Preferimet e administrimit të file"
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -5749,8 +5749,8 @@ msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
 msgstr ""
-"Nuk menzhon hapësirën e punës (duke shpërfillur preferimet tek "
-"dialogu i rregullimeve)."
+"Nuk menzhon hapësirën e punës (duke shpërfillur preferimet tek dialogu i "
+"rregullimeve)."
 
 #: ../src/nautilus-main.c:399
 msgid "open a browser window."
@@ -5774,8 +5774,8 @@ msgid ""
 "Load a saved session from the specified file. Implies \"--no-default-window"
 "\"."
 msgstr ""
-"Ngarkon një seancë të ruajtur nga file i specifikuar. Kërkon \"--no-default-window"
-"\"."
+"Ngarkon një seancë të ruajtur nga file i specifikuar. Kërkon \"--no-default-"
+"window\"."
 
 #: ../src/nautilus-main.c:407
 msgid "FILENAME"
@@ -5793,7 +5793,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Shfleton file e sistemit me menazhuesin e file"
+"Shfleton file e sistemit me administruesin e file"
 
 #. Set initial window title
 #: ../src/nautilus-main.c:478 ../src/nautilus-spatial-window.c:389
@@ -5933,9 +5933,7 @@ msgstr "_Kërko për file..."
 #: ../src/nautilus-navigation-window-menus.c:799
 #: ../src/nautilus-spatial-window.c:906
 msgid "Locate documents and folders on this computer by name or content"
-msgstr ""
-"Gjen dokumentë dhe kartela në këtë kompjuter sipas emrit apo "
-"përmbajtjes"
+msgstr "Gjen dokumentë dhe kartela në këtë kompjuter sipas emrit apo përmbajtjes"
 
 #: ../src/nautilus-navigation-window-menus.c:802
 msgid "_Previous Tab"
@@ -6528,8 +6526,8 @@ msgid ""
 "details."
 msgstr ""
 "Nautilus shpërndahet me dëshirën që të jetë i vlefshëm për ju, por PA ASNJË "
-"LLOJ GARANCIE; pa garancinë preçize të SHITJES apo PËRDORIMIT PËR NJË "
-"QËLLIM PREÇIZ. Shiko Liçencën Publike të Përgjithshme GNU për hollësi të tjera."
+"LLOJ GARANCIE; pa garancinë preçize të SHITJES apo PËRDORIMIT PËR NJË QËLLIM "
+"PREÇIZ. Shiko Liçencën Publike të Përgjithshme GNU për hollësi të tjera."
 
 #: ../src/nautilus-window-menus.c:550
 msgid ""
@@ -6537,17 +6535,17 @@ msgid ""
 "Nautilus; if not, write to the Free Software Foundation, Inc., 51 Franklin "
 "Street, Fifth Floor, Boston, MA 02110-1301 USA"
 msgstr ""
-"Së bashku me Nautilus duhet të keni marrë edhe një kopje të Liçencës "
-"Publike të Përgjithshme GNU; Nëse jo, shkruani tek Free Software Foundation, "
-"Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
+"Së bashku me Nautilus duhet të keni marrë edhe një kopje të Liçencës Publike "
+"të Përgjithshme GNU; Nëse jo, shkruani tek Free Software Foundation, Inc., "
+"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: ../src/nautilus-window-menus.c:562
 msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
 msgstr ""
-"Nautilus është një shell grafik për GNOME që ju jep mundësi të "
-"menazhoni me lehtësi file dhe pjesën tjetër të sistemit tuaj."
+"Nautilus është një shell grafik për GNOME që ju jep mundësi të administroni me "
+"lehtësi file dhe pjesën tjetër të sistemit tuaj."
 
 #: ../src/nautilus-window-menus.c:566
 msgid "Copyright © 1999-2008 The Nautilus authors"
@@ -6780,8 +6778,8 @@ msgstr "Krijuesi i CD/_DVD"
 #: ../src/nautilus-window-menus.c:878
 msgid "Open a folder into which you can drag files to burn to a CD or DVD"
 msgstr ""
-"Hap një kartelë në të cilën mund të zvarriten file për tu masterizuar "
-"në një CD apo DVD"
+"Hap një kartelë në të cilën mund të zvarriten file për tu masterizuar në një "
+"CD apo DVD"
 
 #. name, stock id
 #. label, accelerator
