--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-27  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-09-27  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian Translation.
