Norayr Chilingaryan, improvement
svn path=/trunk/; revision=14670

--- a/po/hy.po
+++ b/po/hy.po
@@ -1808,7 +1808,7 @@ msgstr "Նոր պանակ կերտելու սխալ։"
 #. localizers: the initial name of a new folder
 #: ../libnautilus-private/nautilus-file-operations.c:2247
 msgid "untitled folder"
-msgstr "Առանց վերնագրի պանակ։"
+msgstr "Անվերնագիր պանակ։"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2286
 #, c-format
