--- a/po/sl.po
+++ b/po/sl.po
@@ -5643,7 +5643,7 @@ msgstr "Znova p_reberi"
 
 #: ../src/nautilus-places-sidebar.c:2384
 msgid "Places"
-msgstr "_Mesta"
+msgstr "Mesta"
 
 #: ../src/nautilus-places-sidebar.c:2390
 msgid "Show Places"
