--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-01  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump version to 2.25.1.
+	Stable version lives on the gnome-2-24 branch.
+	
 2008-09-28  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
