Updated Italian translation.
2008-10-02  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

svn path=/branches/gnome-2-24/; revision=14678

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-02  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-10-01  Matic Zgur  <mr.zgur@gmail.com>
 
 	* sl.po: Updated Slovenian translation.
