--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-02  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
+	Remove gnome-vfs from the required libs.
+
 2008-10-01  Alexander Larsson  <alexl@redhat.com>
 
         * configure.in:
