--- a/po/sv.po
+++ b/po/sv.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-04 21:42+0200\n"
-"PO-Revision-Date: 2008-09-04 21:42+0100\n"
+"PO-Revision-Date: 2008-10-05 21:05+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -4077,7 +4077,7 @@ msgstr "Egenskaper för %s"
 #: ../src/file-manager/fm-properties-window.c:1368
 #, c-format
 msgid "MIME type description (MIME type)|%s (%s)"
-msgstr "MIME-typbeskrivning (MIME-typ)|%s (%s)"
+msgstr "%s (%s)"
 
 #: ../src/file-manager/fm-properties-window.c:1585
 msgid "Cancel Group Change?"
