--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
 
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+        * src/nautilus-bookmarks-window.c:
+        * src/nautilus-connect-server-dialog.c:
+        * src/nautilus-file-management-properties.c:
+        * src/nautilus-location-dialog.c:
+	Use gtk_show_uri instead of gnome_help
+
+2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
         * src/nautilus-application.c:
         (initialize_kde_trash_hack):
 	Replace GnomeConfig use with GKeyFile
