--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
+        * src/nautilus-property-browser.c:
+	Don't use gnome_icon_entry
+
 2008-10-06  Alexander Larsson  <alexl@redhat.com>
 
 	Based on patch from  Cosimo Cecchi
