Remove unnecessary includes of libgnome
2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>

        * libnautilus-private/nautilus-customization-data.c:
        * libnautilus-private/nautilus-dnd.c:
        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-global-preferences.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-icon-private.h:
        * libnautilus-private/nautilus-monitor.c:
        * src/file-manager/fm-desktop-icon-view.c:
        * src/file-manager/fm-ditem-page.c:
        * src/file-manager/fm-error-reporting.h:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-history-sidebar.c:
        * src/nautilus-image-properties-page.c:
        * src/nautilus-information-panel.c:
        * src/nautilus-location-bar.c:
        * src/nautilus-location-entry.c:
        * src/nautilus-main.c:
        * src/nautilus-navigation-window-menus.c:
        * src/nautilus-navigation-window.c:
        * src/nautilus-places-sidebar.c:
        * src/nautilus-window-manage-views.c:
        * src/nautilus-window-toolbars.c:
	Remove unnecessary includes of libgnome


svn path=/trunk/; revision=14689

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,33 @@
 2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
 
+        * libnautilus-private/nautilus-customization-data.c:
+        * libnautilus-private/nautilus-dnd.c:
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-global-preferences.c:
+        * libnautilus-private/nautilus-icon-dnd.c:
+        * libnautilus-private/nautilus-icon-private.h:
+        * libnautilus-private/nautilus-monitor.c:
+        * src/file-manager/fm-desktop-icon-view.c:
+        * src/file-manager/fm-ditem-page.c:
+        * src/file-manager/fm-error-reporting.h:
+        * src/file-manager/fm-list-view.c:
+        * src/file-manager/fm-properties-window.c:
+        * src/nautilus-history-sidebar.c:
+        * src/nautilus-image-properties-page.c:
+        * src/nautilus-information-panel.c:
+        * src/nautilus-location-bar.c:
+        * src/nautilus-location-entry.c:
+        * src/nautilus-main.c:
+        * src/nautilus-navigation-window-menus.c:
+        * src/nautilus-navigation-window.c:
+        * src/nautilus-places-sidebar.c:
+        * src/nautilus-window-manage-views.c:
+        * src/nautilus-window-toolbars.c:
+	Remove unnecessary includes of libgnome
+
+2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
         * src/nautilus-property-browser.c:
 	Don't use gnome_icon_entry
 
