--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-mime-actions.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/nautilus-connect-server-dialog-main.c:
+        * src/nautilus-window-manage-views.c:
+	use GtkMountOperation instead of EelMountOperation
+
+2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
         * libnautilus-private/nautilus-customization-data.c:
         * libnautilus-private/nautilus-dnd.c:
         * libnautilus-private/nautilus-file-utilities.c:
