Don't set application name twice (avoids warning)
2008-10-06  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-main.c:
	Don't set application name twice (avoids warning)


svn path=/trunk/; revision=14691

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-06  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-main.c:
+	Don't set application name twice (avoids warning)
+
 2008-10-06  Cosimo Cecchi  <cosimoc@gnome.org>
 
         * libnautilus-private/nautilus-file-operations.c:
