Use GKeyFile instead of GnomeDesktopItemp
2008-10-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-link.[ch]:
        * src/file-manager/fm-properties-window.c:
	Use GKeyFile instead of GnomeDesktopItemp



svn path=/trunk/; revision=14692

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-10-06  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-link.[ch]:
+        * src/file-manager/fm-properties-window.c:
+	Use GKeyFile instead of GnomeDesktopItemp
+
+2008-10-06  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-main.c:
 	Don't set application name twice (avoids warning)
 
