--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-06  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 553073 – invalid strcmp
+
+	* libnautilus-private/nautilus-file.c (update_info_internal):
+	Use eel_ref_str_peek where appropriate.
+
 2008-10-06  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-link.[ch]:
