--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-10-06  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	Bug 553073 – invalid strcmp
+
+	* libnautilus-private/nautilus-file.c (update_info_internal):
+	Use eel_ref_str_peek where appropriate.
+
 2008-09-28  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
