--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-10-06  Matthias Clasen  <mclasen@redhat.com>
 
+	* libnautilus-private/nautilus-open-with-dialog.c (set_uri_and_type):
+	Fix the build
+
+2008-10-06  Matthias Clasen  <mclasen@redhat.com>
+
 	Merged from trunk:
 
 	Bug 553084 – leaks content type description
