Replace GnomeDesktopItem use with GKeyFile
2008-10-06  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-ditem-page.c:
	Replace GnomeDesktopItem use with GKeyFile


svn path=/trunk/; revision=14699

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-06  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-ditem-page.c:
+	Replace GnomeDesktopItem use with GKeyFile
+
 2008-10-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* libnautilus-private/nautilus-open-with-dialog.c (set_uri_and_type):
