Don't use eel_gnome_icon_selector_new() Instead just use file selector
2008-10-07  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-property-browser.c:
	Don't use eel_gnome_icon_selector_new()
	Instead just use file selector with preview.


svn path=/trunk/; revision=14701

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-07  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-property-browser.c:
+	Don't use eel_gnome_icon_selector_new()
+	Instead just use file selector with preview.
+
 2008-10-06  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-ditem-page.c:
